<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BoardCreationFragment">

    <LinearLayout
            android:id="@+id/screen_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

        <View
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_arrow_back" />

        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="match_parent"
                android:text="@string/create_board"
                android:textSize="22sp"
                android:paddingRight="40dp"
                android:textAppearance="@style/error_page_style" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/title_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/screen_header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:text="@string/title_field"
                android:textAppearance="@style/error_page_style"
                android:gravity="center_horizontal|center_vertical" />
        <EditText
                style="@style/input_fields_text"
                android:id="@+id/title_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_field_hint"
                android:paddingStart="5dp"
                android:layout_gravity="center_horizontal"
                android:inputType="text"
                android:importantForAutofill="yes" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/description_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/title_block"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:text="@string/description_field"
                android:textAppearance="@style/error_page_style"
                android:gravity="center_horizontal|center_vertical" />
        <EditText
                style="@style/input_fields_text"
                android:id="@+id/description_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_field_hint"
                android:paddingStart="5dp"
                android:lines="10"
                android:minLines="3"
                android:gravity="top"
                android:maxLines="15"
                android:layout_gravity="center_horizontal"
                android:inputType="textCapSentences|textMultiLine"
                android:importantForAutofill="yes" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
            style="@style/login_button_text"
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/nav_bar_selected"
            android:layout_gravity="center_horizontal"
            android:text="@string/upload_pin"
            android:textAllCaps="false" />

</androidx.constraintlayout.widget.ConstraintLayout>