<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
            style="@style/CustomCardViewStyle"
            app:cardElevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:text="@string/pop_up_create"
                android:textAppearance="@style/profile_page_style"
                android:textSize="22sp"
                android:gravity="center_horizontal|center_vertical" />

        <TextView
                android:id="@+id/pop_up_create_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="80dp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:clickable="true"
                android:text="@string/pop_up_create_board"
                android:textAppearance="@style/error_page_style"
                android:textSize="22sp"
                android:gravity="center_horizontal|center_vertical"
                android:focusable="true" />

        <TextView
                android:id="@+id/pop_up_create_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="140dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:clickable="true"
                android:text="@string/pop_up_create_pin"
                android:textAppearance="@style/error_page_style"
                android:textSize="22sp"
                android:gravity="center_horizontal|center_vertical"
                android:focusable="true" />

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>