<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActualPinFragment">
    <ScrollView
            android:id="@+id/actual_pin_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:fillViewport="true">
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/actual_pin_image"
                    android:layout_width="415dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/help_actual_pin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            <androidx.cardview.widget.CardView
                    android:clickable="true"
                    app:cardElevation="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:minHeight="48dp"
                    android:focusable="true"
                    app:layout_constraintTop_toBottomOf="@+id/actual_pin_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/cardView">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <ImageView
                            android:id="@+id/actual_pin_avatar"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_gravity="left"
                            android:src="@drawable/progress_animation" />

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                        <TextView
                                android:id="@+id/actual_pin_author"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="13sp"
                                android:paddingLeft="12dp"
                                android:layout_gravity="left"
                                android:gravity=""
                                tools:text="@string/actual_pin_username"
                                android:textAppearance="@style/error_page_style" />

                        <TextView
                                android:id="@+id/actual_pin_followers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="13sp"
                                android:paddingLeft="12dp"
                                android:gravity="center"
                                android:textStyle="normal"
                                tools:text="@string/actual_pin_followers"
                                android:textAppearance="@style/error_page_style" />
                    </LinearLayout>
                </LinearLayout>

                <View
                        android:id="@+id/share"
                        android:clickable="true"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="right|center"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/ic_share"
                        android:contentDescription="Share"
                        android:focusable="true" />
            </androidx.cardview.widget.CardView>

            <TextView
                    android:id="@+id/actual_pin_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="123"
                    android:textSize="22sp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="15dp"
                    android:textAppearance="@style/actual_pin_text_style"
                    app:layout_constraintTop_toBottomOf="@+id/cardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                    android:id="@+id/actual_pin_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="123"
                    android:textAppearance="@style/actual_pin_text_style"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/actual_pin_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="30dp"/>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
            android:id="@+id/progress_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone">

        <TextView
                android:id="@+id/apology_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/fixing"
                android:gravity="center"
                android:layout_marginBottom="200dp"
                android:textAppearance="@style/error_page_style"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/apology_text"
                tools:text="Извините произошла ошибка!"
                android:textAppearance="@style/error_page_style"
                android:gravity="center" />

        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_error"
                android:layout_gravity="center_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/error_text"
                android:id="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
